--- a/modules/custom/Processo/config/install/views.view.processo.yml
+++ b/modules/custom/Processo/config/install/views.view.processo.yml
@@ -4,7 +4,10 @@ dependencies:
   config:
     - system.menu.main
   module:
+    - user
     - views_bootstrap
+_core:
+  default_config_hash: NLCCvT3c3oRcyGlQwQAoSSH537-K6fbpEi2inpaUp2M
 id: processo
 label: Processo
 module: views
@@ -21,8 +24,9 @@ display:
     position: 0
     display_options:
       access:
-        type: none
-        options: {  }
+        type: perm
+        options:
+          perm: zeusi
       cache:
         type: none
         options: {  }
@@ -449,6 +453,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - user.permissions
       tags: {  }
   page_1:
     display_plugin: page
@@ -473,4 +478,5 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - user.permissions
       tags: {  }
