--- a/modules/custom/Processo/processo.permissions.yml
+++ b/modules/custom/Processo/processo.permissions.yml
@@ -1,4 +1,4 @@
-# In processo.permissions.yml file...test.
+# In processo.permissions.yml file.test.
 zeusi:
   title: 'Zeusi'
   description: 'A permission for all Processo pages.'
